--- a/styles.css
+++ b/styles.css
@@ -16,8 +16,9 @@ body{
     overflow: hidden;
 }
 
-.banner > img{
-    width: 100%;
+.banner {
+    height: 400px;
+    background: url(/burger.jpg) no-repeat center center/cover;
 }
 .chefdiv{
     background-color: red;
@@ -51,7 +52,7 @@ h3{
     height: 350px;
 }
 .tab > table{
-    width: 78%;
+    width: 73%;
     margin: auto;
     padding-top: 20px;
     height: 300px;
@@ -68,16 +69,15 @@ tr > :nth-child(3){
     text-align: right;
 }
 .tab > img{
-    width: 100px;
+    width: 150px;
     position: relative;
-    left: 89%;
-    bottom: 20px;
+    left: 88%;
+    bottom: 45px;
 }
 .foot{
     position: relative;
     background:url(food-plate2.jpg) no-repeat center center/cover;
-    height: 460px;
-
+    height: 555px;
 }
 .footcontent{
     background-color: rgba(0, 0, 0, 0.6);
@@ -98,24 +98,24 @@ tr > :nth-child(3){
     padding-left: 7px;
 }
 select{
-    height: 30px;
+    height: 40px;
 }
 select > option{
     color: black;
 }
 input{
-    height: 28px;
+    height: 38px;
     padding-left: 10px;
 }
 ::placeholder{
     color: white;
 }
 textarea{
-    height: 100px;
+    height: 150px;
 }
 #submit{
     background-color: yellow;
-    height: 30px;
+    height: 35px;
     padding: 6px;
     border-radius: 5px;
     color:black;
@@ -127,12 +127,26 @@ textarea{
     .container{
         width: 100%;
     }
+    .banner{
+        height: 250px;
+    }
     tr > :nth-child(2){
         display: none;
     }
     .menu{
         width: 70%;
         padding: 2px;
+    }
+    .chefdiv{
+        background-color: red;
+        width: 130px; 
+        height: 130px;
+    }
+    .tab > img{
+        width: 150px;
+        position: relative;
+        left: 84%;
+        bottom: 20px;
     }
 }
 
@@ -141,4 +155,8 @@ textarea{
     .container{
         width: 90%;
     }
+    .banner{
+        height: 300px;
+    }
+
 }
