--- a/styles.css
+++ b/styles.css
@@ -18,7 +18,7 @@ body{
 
 .banner {
     height: 400px;
-    background: url(/burger.jpg) no-repeat center center/cover;
+    background: url(burger.jpg) no-repeat center center/cover;
 }
 .chefdiv{
     background-color: red;
