--- a/styles.css
+++ b/styles.css
@@ -120,6 +120,7 @@ textarea{
     border-radius: 5px;
     color:black;
     font-weight: 900px;
+    border: 1px solid yellow;
 }
 
 /* Media Queries for mobile view */
